// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`отправит вас лог при маунте 1`] = `
Array [
  Object {
    "category": "cars",
    "event": "VAS_SHOW",
    "from": "card-vas",
    "offerId": "1085562758-1970f439",
    "originalPrice": 1777,
    "price": 999,
    "serviceId": "all_sale_activate",
  },
]
`;

exports[`при клике на кнопку дернет проп 1`] = `
Array [
  Object {
    "category": "cars",
    "from": "card-vas",
    "offerId": "1085562758-1970f439",
    "services": Array [
      Object {
        "service": "all_sale_activate",
      },
    ],
    "shouldShowSuccessTextAfter": true,
    "shouldUpdateOfferAfter": true,
    "successText": "Объявление успешно активировано",
  },
]
`;

exports[`при клике на кнопку залогирует клик 1`] = `
Array [
  Object {
    "category": "cars",
    "event": "VAS_CLICK",
    "from": "card-vas",
    "offerId": "1085562758-1970f439",
    "originalPrice": 1777,
    "price": 999,
    "serviceId": "all_sale_activate",
  },
]
`;
